<resources>
    <string name="app_name">TAMAS</string>
    <string name="signin">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="textforwelcomescreen">Welcome to TAMAS! Please Sign in or Register</string>
    <string name="tamas">TAMAS</string>
    <string name="signin_hint">Use your ID/ Email to sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="school_id">ID</string>
    <string name="current_status">Status</string>
    <string name="email">Email</string>
    <string name="createpassword">Create a Password </string>
    <string name="password">Password </string>
    <string name="applyforjob">Please enter your CV below and click submit after you finish</string>
    <string name="jobApplication">Submit Your Application </string>
    <string name="title_activity_login">Sign in</string>


    <string name="back_to_signin">BACK TO SIGN IN</string>
    <string-array name="gradorugrad">
        <item>Undergraduate</item>
        <item>Graduate</item>

    </string-array>
    <string name="title_activity_sdasda">sdasda</string>
</resources>