<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tamas.ecse321.ca.tamas.Register">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_feedback"
        android:textColor="@color/tamasred"
        android:text="Hello"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_name_field"
        android:hint="@string/first_name"
        android:layout_below="@+id/register_feedback"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:id="@+id/lastname_field"
        android:layout_below="@+id/first_name_field"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/school_id"
        android:id="@+id/id_field"
        android:layout_below="@+id/lastname_field"
        android:layout_marginTop="10dp"
        android:inputType="number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/email_field"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/grad" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createpassword"
        android:id="@+id/t1"
        android:layout_below="@+id/email_field"
        android:textAlignment="center"
        android:textSize="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password_field"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_field"
        android:width="140dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_student_button"
        android:layout_alignParentLeft="true" />
    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_field"
        android:layout_alignParentRight="true"
        android:text="@string/back_to_signin"
        android:id="@+id/back_to_signin"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Undergraduate"
        android:id="@+id/ugrad"
        android:layout_below="@+id/id_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Graduate"
        android:id="@+id/grad"
        android:layout_alignTop="@+id/ugrad"
        android:layout_toLeftOf="@+id/back_to_signin"
        android:layout_toStartOf="@+id/back_to_signin" />


</RelativeLayout>
