<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/tamasred"
    tools:context="tamas.ecse321.ca.tamas.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="80dp"
        android:textColor="@color/purewhite"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tamas"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textforwelcomescreen"
        android:textSize="13dp"
        android:textColor="@color/purewhite"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/signin"
        android:id="@+id/signin_button"
        android:layout_above="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:onClick="switchToSigninView"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/register"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/signin_button"
        android:layout_alignStart="@+id/signin_button"
        android:id="@+id/register_button"
        android:onClick="switchToRegisterView"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/register_button"
        android:text="@string/jobApplication"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/signin_button"
        android:layout_alignStart="@+id/signin_button"
        android:id="@+id/apply_to_job"
        android:onClick="switchToApplicationSubmitView"
        />

</RelativeLayout>
