<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tamas.ecse321.ca.tamas.Signin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tamasred"
        android:id="@+id/signin_feedback"
        android:textAlignment="center"
        android:textSize="20dp"
        />
    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/signin_button"
        android:layout_below="@+id/password_field"
        android:layout_gravity="center_vertical"
        android:text="@string/signin"
        />
    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_below="@+id/password_field"
        android:layout_alignParentRight="true"
        android:text="@string/register"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_feedback"
        android:hint="@string/signin_hint"
        android:id="@+id/id_field"
        android:paddingBottom="20dp"/>
    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_below="@+id/id_field"
        android:hint="@string/password"

        />
</RelativeLayout>
